feat: getAll products functionality ✨
